fixed bugs with editing recurring transactions
