# backend/src/main/java/com/app/entity/RecurringTransaction.java
@@ -23,9 +23,6 @@ public class RecurringTransaction extends BaseEntity {
     @ManyToOne
     @JoinColumn(name = "account_id", nullable = false)
     private Account account;
-    @ManyToOne
-    @JoinColumn(name = "category_id", nullable = false)
-    private Category category;
     private String name;
     private double amount;
     @Enumerated(EnumType.STRING)
